feat: search api integration
