# backend/swagger.yml
@@ -309,6 +309,39 @@ paths:
         "401":
           $ref: "#/components/responses/UnauthorizedError"
 
+  /note/search-notes:
+    post:
+      summary: Search notes
+      tags:
+        - Note
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            example: 10
+        - in: query
+          name: search
+          schema:
+            type: string
+            example: test
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+
   /user/profile:
     get:
       summary: User profile
